--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://chrisdocs.github.io/reactport/",
+  "homepage": "https://chrisdocs.github.io/ChrisPort/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
