--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://chrisdocs.github.io/reactport/",
+  "homepage": "https://chrisdocs.github.io/ChrisPort/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "12.8.3",
     "bootstrap": "5.0.2",
     "express": "4.17.1",
+    "gh-pages": "^3.2.3",
     "mongodb": "4.0.1",
     "mongoose": "5.13.5",
     "react": "^17.0.2",
