--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
     "bootstrap": "5.0.2",
+    "cors": "^2.8.5",
     "express": "4.17.1",
     "gh-pages": "^3.2.3",
     "mongodb": "4.0.1",
     "mongoose": "5.13.5",
+    "nodemailer": "^6.6.3",
     "react": "^17.0.2",
     "react-bootstrap": "2.0.0-beta.4",
     "react-dom": "^17.0.2",
