--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "5.0.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "express": "4.17.1",
     "gh-pages": "^3.2.3",
     "mongodb": "4.0.1",
@@ -19,6 +20,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.5",
     "react-multi-carousel": "2.6.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
